# OptimizationMethods

./: .gitignore  chosen_temp.json  main.py.prof  runs_0.jsonl  runs_1.jsonl  runs_2.jsonl  runs_3.jsonl  runs_4.jsonl  runs_5.jsonl  runs_6.jsonl  runs_7.jsonl  tune_log.jsonl
GroupProblem/: main.py  main.py.cprof  parser.py  вариант решения примеров.xlsx
GroupProblem/C/: main.cpp
GroupProblem/C/Birds/: Birds.sln
GroupProblem/C/Birds/Birds/: AStar.cpp  AStar.h  Birds.vcxproj  Birds.vcxproj.filters  main.cpp
GroupProblem/Python/: birdparser.py  clean.sh  main.py  main.py.cprof  run_all.sh
GroupProblem/True_Python/: BranchIntegrity.py  README.md  pyrun.py  requirements.txt  temp.py  tune_temp.py
GroupProblem/True_Python/ctools/: CMakeLists.txt  astar.cpp
GroupProblem/True_Python/data/: BIRDS25.rar  matrix_config.jsonl  matrix_config_andrey.jsonl  test_config.json  test_config_template.json
GroupProblem/True_Python/data/BIRDS25/: BIRDS_1.txt  BIRDS_16.txt  BIRDS_25.txt  BIRDS_29.txt  BIRDS_3.txt  BIRDS_4.txt  BIRDS_5.txt  BIRDS_9.txt
GroupProblem/True_Python/src/: BranchIntegrity.py  __init__.py  astar.py  astar_optimize.py  temp.py  tune_temp.py
GroupProblem/True_Python/tests/: __init__.py  ce2e.py  e2e.py  e2e_optimize.py  pyrun.py
Lab1/: Lab1.asv  Lab1.m
Lab1/Отчёт/: Марков_ЛР1.docx
Lab2/: Lab2.m
Lab2/Отчёт/: ~$рков_ЛР2.docx  Марков_ЛР2.docx
Lab3/: Lab3.m  Lab3.rar  annealing.m  bruteforce_discrete.m  genetic.m  parse_data_file.m  pattern_search.m  random_search.m  run_multiple_tests.m  ТЗ на 3 лабу.txt
Lab3/Отчёт/: Марков_ЛР3.docx
(+40 files in other folders)
